[gd_scene load_steps=2 format=3 uid="uid://cg1al0xht2gdb"]

[ext_resource type="Script" uid="uid://c8o3pvvr3i0vh" path="res://main_menu.gd" id="1_i26rj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i26rj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.85, 0.14875, 0.085, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="icon" type="Panel" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HSeparator" type="HSeparator" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0

[node name="level1Button" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Level 1"

[node name="level2Button" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Level 2"

[node name="level3Button" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Level 3"

[node name="HSeparator2" type="HSeparator" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0

[node name="quitGameButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "QUIT GAME"

[connection signal="pressed" from="ColorRect/VBoxContainer/level1Button" to="." method="_on_level1Button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/level2Button" to="." method="_on_level2Button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/level3Button" to="." method="_on_level3Button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/quitGameButton" to="." method="_on_quitGameButton_pressed"]
